碼掉匯款帳號

--- a/registration.html
+++ b/registration.html
@@ -112,8 +112,8 @@
                                 </h3>
                                 <div class="text-gray-700 space-y-2 mt-4 text-lg">
                                     <p><strong>戶名：</strong>中華民國人因工程學會</p>
-                                    <p><strong>銀行代碼：</strong>700</p>
-                                    <p><strong>銀行帳號：</strong>7000010 – 17008348</p>
+                                    <p><strong>銀行代碼：</strong>xxx</p>
+                                    <p><strong>銀行帳號：</strong>xxx</p>
                                 </div>
                             </div>
                         </div>
@@ -139,4 +139,5 @@
         document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 人因工程研討會. All Rights Reserved.`;
     </script>
 </body>
+
 </html>
