--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
-                &copy; 2024 人因工程研討會. 版權所有.
+                &copy; Made by 中原工業與系統工程學系-網路實驗室<br>特別感謝中原大學工業與系統工程學系-張展瑋協助
             </p>
         </div>
     </footer>
@@ -934,4 +934,5 @@
         });
     </script>
 </body>
+
 </html>
