--- a/registration.html
+++ b/registration.html
@@ -136,8 +136,9 @@
 
     <script>
         // --- Dynamic Footer Year ---
-        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 人因工程研討會. All Rights Reserved.`;
+        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 中原大學工業系-網路實驗室.`;
     </script>
 </body>
 
 </html>
+
