--- a/submission-symposium.html
+++ b/submission-symposium.html
@@ -108,12 +108,13 @@
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
-                &copy; 2024 人因工程研討會. 版權所有.
+                &copy; 中原大學工業系-網路實驗室.
             </p>
         </div>
     </footer>
     <script>
-        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 人因工程研討會. 版權所有.`;
+        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 中原大學工業系-網路實驗室.`;
     </script>
 </body>
 </html>
+
