--- a/registration.html
+++ b/registration.html
@@ -129,7 +129,7 @@
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
-                <!-- Dynamic year will be inserted here -->
+                &copy; 2024 中原大學工業系-網路實驗室.<!-- Dynamic year will be inserted here -->
             </p>
         </div>
     </footer>
@@ -141,4 +141,5 @@
 </body>
 
 </html>
+
 
