--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
         <div class="container mx-auto px-6 text-center">
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
+            <p class="text-gray-400 mb-4">特別感謝中原大學工業與系統工程學系-張展瑋協助</p>
             <p class="text-gray-500 text-sm">
                 &copy; Made by 中原工業與系統工程學系-網路實驗室<br>特別感謝中原大學工業與系統工程學系-張展瑋協助
             </p>
@@ -930,9 +931,10 @@
         // --- Dynamic Footer Year ---
         const currentYear = new Date().getFullYear();
         document.querySelectorAll('footer .text-sm').forEach(el => {
-            el.innerHTML = `&copy; ${currentYear} 人因工程研討會. 版權所有.`;
+            el.innerHTML = `&copy; ${currentYear} 中原大學工業系-網路實驗室.`;
         });
     </script>
 </body>
 
 </html>
+
