--- a/index.html
+++ b/index.html
@@ -225,11 +225,22 @@
                     <p class="text-lg text-gray-500 mt-2">精彩豐富的議程，讓您滿載而歸</p>
                     <div class="w-24 h-1 bg-blue-600 mx-auto mt-4"></div>
                 </div>
-                <!-- Image placeholder for the schedule -->
-                <div class="max-w-4xl mx-auto">
-                    <img src="schedule.png" 
-                         alt="研討會議程表圖片" 
-                         class="w-full h-auto rounded-lg shadow-lg mx-auto border border-gray-200 ml-11">
+                <!-- Grid container for the two schedules -->
+                <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-start">
+                    <!-- Schedule for Day 1 -->
+                    <div class="text-center">
+                        <h3 class="text-2xl font-bold text-gray-800 mb-4">上半天議程</h3>
+                        <img src="schedule.png" 
+                             alt="研討會第一天議程表" 
+                             class="w-full h-auto rounded-lg shadow-lg border border-gray-200">
+                    </div>
+                    <!-- Schedule for Day 2 -->
+                    <div class="text-center">
+                         <h3 class="text-2xl font-bold text-gray-800 mb-4">下半天議程</h3>
+                        <img src="schedule2.png" 
+                             alt="研討會第二天議程表 (示意圖)" 
+                             class="w-full h-auto rounded-lg shadow-lg border border-gray-200 bg-gray-100">
+                    </div>
                 </div>
             </div>
         </section>
