--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@
                         <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">研討會主題與簡介</h3>
                         <div class="text-left text-gray-600 leading-relaxed text-xl space-y-4">
                             <p>
-                                本次人因工程研討會旨在匯聚來自世界各地的學者、研究人員、設計師與業界專家，共同探討人因工程在各領域的前瞻應用與挑戰。我們將深入討論從使用者體驗、產品設計、工作環境安全到智慧醫療與自動駕駛等多元議題。
-                            </p>
-                            <p>
-                                我們相信，透過跨領域的對話與合作，能夠激發更多創新思維，推動以人為中心的設計理念，並解決當代社會面臨的複雜問題。誠摯邀請您一同參與這場知識饗宴，分享您的見解，並與領域內的頂尖專家建立連結。
+                                「2026 中華民國人因工程學會年會暨學術研討會」由中華民國人因工程學會主辦，中原大學承辦，以「人因工程與智慧韌性」為主題，廣邀國內外人因專家學者、政府單位與產業界夥伴共同參與，深入探討新興科技應用對人因工程未來發展的影響。
                             </p>
                         </div>
                     </div>
@@ -355,10 +352,10 @@
                     <!-- Submission Tab Content -->
                     <div class="mt-8 text-left text-gray-600 leading-relaxed text-xl">
                         <div id="tab-symposium" class="submission-tab-panel space-y-4">
-                            <p>我們誠摯邀請您投稿與人因工程相關領域的原創研究論文。所有接受的論文將被收錄於研討會論文集中，並安排口頭或海報發表。</p>
+                            <p>我本屆年會將聚焦於 AI 與人因工程的結合，探討智慧科技如何影響人機協作、決策支援與風險控管，並呈現跨領域的最新研究成果。議題 涵蓋醫療人因與智慧照護、休閒與運動、交通安全與智慧運輸、職業安全與工作設計、國防與軍事人因、產品設計與創新等方向，期望透過跨界交流，促進產官學研的合作，開創人因工程在智慧社會下的新格局。</p>
                             <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
                              <ul class="list-disc list-inside space-y-2">
-                                <li><strong>開始投稿和線上報名：</strong> 2025.11.01</li>
+                                <li><strong>開始投稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
                                 <li><strong>徵稿截止：</strong> 2026.01.17</li>
                                 <li><strong>寄發論文接受信：</strong> 2026.02.01</li>
                                 <li><strong>論文定稿上傳截止：</strong> 2026.02.15</li>
@@ -375,7 +372,7 @@
                              <p>為鼓勵學生積極參與人因工程學術研究，提昇論文寫作與發表能力，特舉辦本競賽。</p>
                              <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
                              <ul class="list-disc list-inside space-y-2">
-                                <li><strong>開始投稿和線上報名：</strong> 2025.11.01</li>
+                                <li><strong>開始投稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
                                 <li><strong>徵稿截止：</strong> 2026.01.17</li>
                                 <li><strong>決賽名單公佈：</strong> 2026.01.31</li>
                                 <li><strong>決賽：</strong> 2026.03.27</li>
@@ -391,7 +388,7 @@
                             <p>「智慧生活、人本設計」，鼓勵學生發揮創意，運用人因工程知識，設計解決實際生活問題的產品或服務。</p>
                             <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
                              <ul class="list-disc list-inside space-y-2">
-                                <li><strong>創意徵稿和線上報名：</strong> 2025.11.01</li>
+                                <li><strong>創意徵稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
                                 <li><strong>出賽徵稿截止：</strong> 2026.01.17</li>
                                 <li><strong>初賽入圍公告：</strong> 2026.01.31</li>
                                 <li><strong>決賽：</strong> 2026.03.27</li>
