--- a/submission-design.html
+++ b/submission-design.html
@@ -70,7 +70,7 @@
                                 <tbody>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">創意徵稿和線上報名</td>
-                                        <td class="py-3">2025年11月01日</td>
+                                        <td class="py-3">2025年11月01日 ~ 2026年02月10日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">初賽徵稿截止</td>
@@ -171,13 +171,12 @@
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
-                &copy; 2024 中原大學工業系-網路實驗室.
+                &copy; 2024 人因工程研討會. 版權所有.
             </p>
         </div>
     </footer>
     <script>
-        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 中原大學工業系-網路實驗室.`;
+        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 人因工程研討會. 版權所有.`;
     </script>
 </body>
-
 </html>
