--- a/submission-symposium.html
+++ b/submission-symposium.html
@@ -40,7 +40,11 @@
                 <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-lg shadow-lg text-left text-gray-600 leading-relaxed text-xl space-y-8">
                     <div>
                         <h2 class="text-3xl font-bold text-gray-800 mb-4">研討會簡介</h2>
-                        <p>我們誠摯邀請您投稿與人因工程相關領域的原創研究論文。所有接受的論文將被收錄於研討會論文集中，並安排口頭或海報發表。</p>
+                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp「2026 中華民國人因工程學會年會暨學術研討會」由中華民國人因工程學會主辦，中原大學承辦，以「人因工程與智慧韌性」為主題，廣邀國內外人因專家學者、政府單位與產業界夥伴共同參與，深入探討新興科技應用對人因工程未來發展的影響。</p>
+                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp隨著人工智慧（AI）、物聯網（IoT）、5G 通訊、機器人協作與網宇實體整合系統（Cyber-Physical Systems, CPS）的迅速普及，全球產業與社會正加速邁向數位化與智慧化。然而，科技進步若缺乏人因工程的介入，往往可能導致操作負荷增加、認知誤差與系統使用排斥，甚至引發安全隱憂。如何讓智慧科技真正回應人類需求，並在醫療、交通、製造、教育、國防與生活服務等多元領域中落實「以人為本」的價值，正是當前人因工程的重要使命。</p>
+                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp本屆年會將聚焦於 AI 與人因工程的結合，探討智慧科技如何影響人機協作、決策支援與風險控管，並呈現跨領域的最新研究成果。議題涵蓋醫療人因與智慧照護、休閒與運動、交通安全與智慧運輸、職業安全與工作設計、國防與軍事人因、產品設計與創新等方向，期望透過跨界交流，促進產官學研的合作，開創人因工程在智慧社會下的新格局。</p>
+                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp學會亦將持續推動「人因工程論壇」，即「運輸安全、軍事、醫療、職業安全、航太、AI、以及現場人因案例」等專場，邀請國內外重量級學者與產業專家分享經驗，更特別舉辦「台、日、韓人因論壇」，邀請三方人因學者共同探討未來的發展方向。此外，為鼓勵年輕世代投入人因工程研究，本屆年會也將設置 學生論文競賽與創新設計競賽，提供青年學子交流與展現的平台，激發未來發展潛能。</p>
+                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp在全球科技快速革新的挑戰中，人因工程的角色不再只是配合設計的輔助者，而是確保系統安全性、可用性與永續性的關鍵核心。誠摯邀請各界踴躍投稿與參與，攜手共創一個 「智慧科技 × 人因創新」 的嶄新時代。</p>
                     </div>
 
                     <div>
@@ -66,7 +70,7 @@
                                 <tbody>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">開始投稿和線上報名</td>
-                                        <td class="py-3">2025年11月01日</td>
+                                        <td class="py-3">2025年11月01日 ~ 2026年02月10日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">徵稿截止</td>
@@ -108,13 +112,12 @@
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
-                &copy; 中原大學工業系-網路實驗室.
+                &copy; 2024 人因工程研討會. 版權所有.
             </p>
         </div>
     </footer>
     <script>
-        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 中原大學工業系-網路實驗室.`;
+        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 人因工程研討會. 版權所有.`;
     </script>
 </body>
 </html>
-
