--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 text-center px-4">
               <h1 class="text-4xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">中原大學 人因工程研討會</h1>
-              <p class="text-lg md:text-2xl mb-2">探索人、科技與系統的未來</p>
+              <p class="text-lg md:text-2xl mb-2">人因工程與智慧韌性</p>
               <p class="text-md md:text-xl font-light mb-8">2024年12月14日-15日 | 中原大學</p>
               <a href="registration.html" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105">
                 立即報名
@@ -120,7 +120,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h2 class="text-[35px] font-bold text-gray-800">關於研討會</h2>
-                    <p class="text-lg text-gray-500 mt-2">連結學術與產業，共創以人為本的未來</p>
+                    <p class="text-lg text-gray-500 mt-2">人因工程與智慧韌性</p>
                     <div class="w-24 h-1 bg-blue-600 mx-auto mt-4"></div>
                 </div>
 
@@ -995,3 +995,4 @@
     </script>
 </body>
 </html>
+
