--- a/registration.html
+++ b/registration.html
@@ -41,35 +41,41 @@
     <main>
         <!-- Registration Fee Section -->
         <section class="bg-white py-16 md:py-20">
-            <div class="container mx-auto px-6 text-center">
+            <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">註冊費用</h1>
                 <p class="text-lg text-gray-500 mb-12">選擇適合您的身分進行報名</p>
-                <div class="w-24 h-1 bg-blue-600 mx-auto mt-4 mb-12"></div>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
-                    <!-- EST Member -->
-                    <div class="flex flex-col items-center p-6 bg-gray-50 rounded-lg shadow-sm border-t-4 border-blue-500">
-                        <p class="text-4xl font-bold text-blue-600">NTD$3,000</p>
-                        <span class="text-xl text-gray-700 font-semibold mt-4">人因學會會員</span>
-                        <div class="w-32 h-px bg-blue-300 mt-2"></div>
-                    </div>
-                    <!-- Non-EST Member -->
-                    <div class="flex flex-col items-center p-6 bg-gray-50 rounded-lg shadow-sm border-t-4 border-blue-500">
-                        <p class="text-4xl font-bold text-blue-600">NTD$4,000</p>
-                        <span class="text-xl text-gray-700 font-semibold mt-4">非會員</span>
-                        <div class="w-32 h-px bg-blue-300 mt-2"></div>
-                    </div>
-                    <!-- Student EST Member -->
-                    <div class="flex flex-col items-center p-6 bg-gray-50 rounded-lg shadow-sm border-t-4 border-blue-500">
-                        <p class="text-4xl font-bold text-blue-600">NTD$2,200</p>
-                        <span class="text-xl text-gray-700 font-semibold mt-4">人因學會學生會員</span>
-                        <div class="w-32 h-px bg-blue-300 mt-2"></div>
-                    </div>
-                    <!-- Student Non-EST Member -->
-                    <div class="flex flex-col items-center p-6 bg-gray-50 rounded-lg shadow-sm border-t-4 border-blue-500">
-                        <p class="text-4xl font-bold text-blue-600">NTD$2,500</p>
-                        <span class="text-xl text-gray-700 font-semibold mt-4">非會員學生</span>
-                        <div class="w-32 h-px bg-blue-300 mt-2"></div>
-                    </div>
+                <div class="overflow-x-auto ">
+                    <table class="w-full text-center border-collapse ">
+                        <thead>
+                            <tr class="bg-blue-100 ">
+                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 rounded-tl-lg">身份</th>
+                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 ">費用(before 2月10日)</th>
+                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 rounded-tr-lg">費用(after 2月10日)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="hover:bg-blue-50">
+                                <td class="p-4 border-b border-blue-200">人因學會會員</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $3,000</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $3,500</td>
+                            </tr>
+                            <tr class="hover:bg-blue-50">
+                                <td class="p-4 border-b border-blue-200">非會員</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $4,000</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $4,500</td>
+                            </tr>
+                            <tr class="hover:bg-blue-50">
+                                <td class="p-4 border-b border-blue-200">人因學會學生會員</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $2,200</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $2,700</td>
+                            </tr>
+                            <tr class="hover:bg-blue-50">
+                                <td class="p-4 border-b border-blue-200 rounded-bl-lg">非會員學生</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold rounded-br-lg">NTD $2,500</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold rounded-br-lg">NTD $3,000</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </section>
@@ -86,7 +92,7 @@
                     <div class="bg-blue-800 p-10 md:p-12 text-white flex flex-col justify-center">
                         <h2 class="text-3xl font-bold mb-6 text-center">注意事項</h2>
                         <div class="text-lg leading-relaxed">
-                            <p>本次會議僅接受「銀行轉帳」與「線上電子支付」兩種方式繳費，不支援行動支付（如：LinePay、ApplePay、台灣Pay等），謝謝您的配合。</p>
+                            <p>本次會議僅接受「藍新科技第三方支付」，</p><p>不支援行動支付（如：LinePay、ApplePay、台灣Pay等），謝謝您的配合。</p>
                         </div>
                     </div>
                     <!-- Right Column: Payment Details -->
@@ -98,23 +104,9 @@
                                     線上電子支付
                                 </h3>
                                 <p class="text-gray-600 mb-4">請點選以下對應身分之連結，並請於「留言給商店」欄位輸入您的投稿文章ID，以利後續對帳流程。</p>
-                                <ol class="list-decimal list-inside text-blue-600 space-y-2">
-                                    <li><a href="#" class="hover:underline">人因學會會員 - NTD$3,000</a></li>
-                                    <li><a href="#" class="hover:underline">非會員 - NTD$4,000</a></li>
-                                    <li><a href="#" class="hover:underline">人因學會學生會員 - NTD$2,200</a></li>
-                                    <li><a href="#" class="hover:underline">非會員學生 - NTD$2,500</a></li>
-                                </ol>
-                            </div>
-                            <div class="pt-4">
-                                <h3 class="flex items-center text-2xl font-bold text-gray-800 mb-3">
-                                    <span class="w-3 h-3 bg-blue-600 rounded-full mr-3"></span>
-                                    銀行轉帳資訊
-                                </h3>
-                                <div class="text-gray-700 space-y-2 mt-4 text-lg">
-                                    <p><strong>戶名：</strong>中華民國人因工程學會</p>
-                                    <p><strong>銀行代碼：</strong>xxx</p>
-                                    <p><strong>銀行帳號：</strong>xxx</p>
-                                </div>
+                                <a href="您的付款頁面網址" class="inline-block bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md hover:bg-blue-700 transition duration-300">
+                                    前往付款
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -129,17 +121,9 @@
             <p class="font-bold text-lg mb-2">人因工程研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
-                &copy; 2024 中原大學工業系-網路實驗室.<!-- Dynamic year will be inserted here -->
+                <!-- Dynamic year will be inserted here -->
             </p>
         </div>
     </footer>
-
-    <script>
-        // --- Dynamic Footer Year ---
-        document.querySelector('footer .text-sm').innerHTML = `&copy; ${new Date().getFullYear()} 中原大學工業系-網路實驗室.`;
-    </script>
 </body>
-
 </html>
-
-
