--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
         // --- NEWS DATA & LOGIC ---
         const allNewsData = [
             { date: '2025年09月20日', title: '網站上線', content: '研討會官方網站今日正式啟用，歡迎多加利用。', category: '最新消息' },
-            { date: '2025年11月01日', title: '論文徵稿', content: '自日期起開放論文徵稿囉，歡迎大家踴躍投稿', category: '一般公告' },
+            { date: '2025年11月01日', title: '論文徵稿', content: '自2025/11/01起至2026/02/10開放論文徵稿囉，歡迎大家踴躍投稿', category: '一般公告' },
         ];
         
         function createNewsItemHTML(news, index) {
@@ -1093,3 +1093,4 @@
     </script>
 </body>
 </html>
+
