--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>人因工程研討會</title>
+    <title>2026人因工程年會暨研討會</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Styles -->
@@ -49,7 +49,7 @@
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="#hero" class="flex items-center space-x-3">
             <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
-            <span class="text-2xl font-bold text-blue-600">人因工程研討會</span>
+            <span class="text-2xl font-bold text-blue-600">2026人因工程年會暨研討會</span>
         </a>
         
         <nav class="hidden md:flex space-x-6">
@@ -94,7 +94,7 @@
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('topbg.jpg')"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 text-center px-4">
-              <h1 class="text-4xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">人因工程研討會</h1>
+              <h1 class="text-4xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">2026人因工程年會暨研討會</h1>
               <p class="text-lg md:text-2xl mb-2">人因工程與智慧韌性</p>
               <p class="text-md md:text-xl font-light mb-8">2026年03月27日-29日 | 中原大學</p>
               <a href="registration.html" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105">
@@ -635,7 +635,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="font-bold text-lg mb-2">人因工程研討會</p>
+            <p class="font-bold text-lg mb-2">2026人因工程年會暨研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
         </div>
     </footer>
@@ -1098,3 +1098,4 @@
     </script>
 </body>
 </html>
+
