--- a/submission-paper.html
+++ b/submission-paper.html
@@ -20,7 +20,7 @@
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="index.html" class="flex items-center space-x-3">
             <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
-            <span class="text-2xl font-bold text-blue-600">人因工程研討會</span>
+            <span class="text-2xl font-bold text-blue-600">2026人因工程年會暨研討會</span>
         </a>
         <nav>
            <a href="index.html" class="text-xl text-gray-600 hover:text-blue-600 transition duration-300">返回主頁</a>
@@ -154,10 +154,11 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="font-bold text-lg mb-2">人因工程研討會</p>
+            <p class="font-bold text-lg mb-2">2026人因工程年會暨研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
         </div>
     </footer>
     
 </body>
 </html>
+
