--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2026人因工程年會暨研討會</title>
+    <title>第33屆中華民國人因工程學會年會暨學術研討會</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Styles -->
@@ -49,7 +49,7 @@
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="#hero" class="flex items-center space-x-3">
             <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
-            <span class="text-2xl font-bold text-blue-600">2026人因工程年會暨研討會</span>
+            <span class="text-1xl md:text-2xl font-bold text-blue-600">第33屆中華民國人因工程學會年會<br class = md:hidden>暨學術研討會</span>
         </a>
         
         <nav class="hidden md:flex space-x-6">
@@ -94,7 +94,7 @@
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('topbg.jpg')"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 text-center px-4">
-              <h1 class="text-4xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">2026人因工程年會暨研討會</h1>
+              <h1 class="text-3xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">第33屆<br>中華民國人因工程學會年會<br>暨學術研討會</h1>
               <p class="text-lg md:text-2xl mb-2">人因工程與智慧韌性</p>
               <p class="text-md md:text-xl font-light mb-8">2026年03月27日-29日 | 中原大學</p>
               <a href="registration.html" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105">
@@ -137,7 +137,7 @@
                         <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">研討會主題與簡介</h3>
                         <div class="text-left text-gray-600 leading-relaxed text-xl space-y-4">
                             <p>
-                                「2026 中華民國人因工程學會年會暨學術研討會」由中華民國人因工程學會主辦，中原大學承辦，以「人因工程與智慧韌性」為主題，廣邀國內外人因專家學者、政府單位與產業界夥伴共同參與，深入探討新興科技應用對人因工程未來發展的影響。
+                                「第33屆中華民國人因工程學會年會暨學術研討會」由中華民國人因工程學會主辦，中原大學承辦，以「人因工程與智慧韌性」為主題，廣邀國內外人因專家學者、政府單位與產業界夥伴共同參與，深入探討新興科技應用對人因工程未來發展的影響。
                             </p>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
                 <div class="max-w-4xl mx-auto">
                     <!-- Submission Tab Buttons -->
                     <div class="flex border-b border-gray-300">
-                        <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-symposium">人因工程研討會</button>
+                        <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-symposium">第33屆中華民國人因工程學會年會暨學術研討會</button>
                         <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-paper-competition">學生論文競賽</button>
                         <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-design-competition">學生設計競賽</button>
                     </div>
@@ -635,7 +635,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="font-bold text-lg mb-2">2026人因工程年會暨研討會</p>
+            <p class="font-bold text-lg mb-2">第33屆中華民國人因工程學會年會暨學術研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
         </div>
     </footer>
@@ -1098,4 +1098,3 @@
     </script>
 </body>
 </html>
-
