--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>報名資訊 - 人因工程研討會</title>
+    <title>報名資訊 - 第33屆中華民國人因工程學會年會暨學術研討會</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts for Serif Style (Optional, but looks nice) -->
@@ -30,7 +30,7 @@
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="index.html" class="flex items-center space-x-3">
             <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
-            <span class="text-2xl font-bold text-blue-600">2026人因工程年會暨研討會</span>
+            <span class="text-2xl font-bold text-blue-600">第33屆中華民國人因工程學會年會暨學術研討會</span>
         </a>
         <nav>
            <a href="index.html" class="text-xl text-gray-600 hover:text-blue-600 transition duration-300">返回主頁</a>
@@ -118,7 +118,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="font-bold text-lg mb-2">2026人因工程年會暨研討會</p>
+            <p class="font-bold text-lg mb-2">第33屆中華民國人因工程學會年會暨學術研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
             <p class="text-gray-500 text-sm">
                 <!-- Dynamic year will be inserted here -->
@@ -127,4 +127,3 @@
     </footer>
 </body>
 </html>
-
