--- a/submission-paper.html
+++ b/submission-paper.html
@@ -20,7 +20,7 @@
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="index.html" class="flex items-center space-x-3">
             <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
-            <span class="text-2xl font-bold text-blue-600">2026人因工程年會暨研討會</span>
+            <span class="text-2xl font-bold text-blue-600">第33屆中華民國人因工程學會年會暨學術研討會</span>
         </a>
         <nav>
            <a href="index.html" class="text-xl text-gray-600 hover:text-blue-600 transition duration-300">返回主頁</a>
@@ -68,7 +68,7 @@
                     <div>
                         <h2 class="text-3xl font-bold text-gray-800 mb-4">報名與投稿方式</h2>
                         <div class="space-y-4">
-                            <p>參賽學生必須透過第三十一屆中華民國人因工程學會年會暨國際學術研討會（以下簡稱本次大會）線上註冊系統報名，並於註冊時註明「參加學生論文競賽」及繳交註冊費後始完成報名。</p>
+                            <p>參賽學生必須透過第33屆中華民國人因工程學會年會暨學術研討會（以下簡稱本次大會）線上註冊系統報名，並於註冊時註明「參加學生論文競賽」及繳交註冊費後始完成報名。</p>
                             <p>參賽論文需經由本次大會投稿系統上傳PDF電子檔，其格式與頁數均依照本次大會論文全文要求，並於上傳時將以下文件依序合併為一個PDF檔案後上傳，始完成投稿程序。</p>
                             <ul class="list-disc list-inside ml-4">
                                 <li>論文指導老師推薦信</li>
@@ -139,7 +139,7 @@
 
                     <div>
                         <h2 class="text-3xl font-bold text-gray-800 mb-4">獎項</h2>
-                        <p>本次大會皆頒發參賽證明予所有參賽入圍學生以茲鼓勵，將分為大學生組及研究生組各別競賽，並視報名人數與參賽論文品質，由各組所有決賽論文中選出第一名頒發獎金新台幣5,000元，第二名頒發獎金新台幣4,000元，第三名頒發獎金新台幣3,000元，和佳作數名。同時為獎勵參賽同學的努力以及用心，前三名之競賽得獎文章，將收入於人因工程學刊－2026人因研討會特刊，競賽佳作得獎文章，將由人因學刊編輯委員會擇優挑選進行收錄。</p>
+                        <p>本次大會皆頒發參賽證明予所有參賽入圍學生以茲鼓勵，將分為大學生組及研究生組各別競賽，並視報名人數與參賽論文品質，由各組所有決賽論文中選出第一名頒發獎金新台幣5,000元，第二名頒發獎金新台幣4,000元，第三名頒發獎金新台幣3,000元，和佳作數名。同時為獎勵參賽同學的努力以及用心，前三名之競賽得獎文章，將收入於人因工程學刊－第33屆中華民國人因工程學會年會暨學術研討會特刊，競賽佳作得獎文章，將由人因學刊編輯委員會擇優挑選進行收錄。</p>
                     </div>
                     <div class="pt-4 text-center">
                                 <a href="registration.html" class="inline-block bg-blue-600 text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105">
@@ -154,12 +154,10 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="font-bold text-lg mb-2">2026人因工程年會暨研討會</p>
+            <p class="font-bold text-lg mb-2">第33屆中華民國人因工程學會年會暨學術研討會</p>
             <p class="text-gray-400 mb-4">致力於推動以人為本的設計與創新。</p>
         </div>
     </footer>
     
 </body>
 </html>
-
-
