--- a/submission-symposium.html
+++ b/submission-symposium.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>投稿資訊 - 人因工程研討會</title>
+    <title>投稿資訊 - 第33屆中華民國人因工程學會年會暨學術研討會</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Styles -->
@@ -20,7 +20,7 @@
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="index.html" class="flex items-center space-x-3">
             <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
-            <span class="text-2xl font-bold text-blue-600">2026人因工程年會暨研討會</span>
+            <span class="text-2xl font-bold text-blue-600">第33屆中華民國人因工程學會年會暨學術研討會</span>
         </a>
         <nav>
            <a href="index.html" class="text-xl text-gray-600 hover:text-blue-600 transition duration-300">返回主頁</a>
@@ -32,7 +32,7 @@
         <section class="py-16 md:py-24 bg-white">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
-                    <h1 class="text-4xl md:text-5xl font-bold text-gray-800">人因工程研討會</h1>
+                    <h1 class="text-4xl md:text-5xl font-bold text-gray-800">第33屆中華民國人因工程學會年會暨學術研討會</h1>
                     <p class="text-lg text-gray-500 mt-2">投稿資訊詳情</p>
                     <div class="w-24 h-1 bg-blue-600 mx-auto mt-4"></div>
                 </div>
@@ -40,7 +40,7 @@
                 <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-lg shadow-lg text-left text-gray-600 leading-relaxed text-xl space-y-8">
                     <div>
                         <h2 class="text-3xl font-bold text-gray-800 mb-4">研討會簡介</h2>
-                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp「2026 中華民國人因工程學會年會暨學術研討會」由中華民國人因工程學會主辦，中原大學承辦，以「人因工程與智慧韌性」為主題，廣邀國內外人因專家學者、政府單位與產業界夥伴共同參與，深入探討新興科技應用對人因工程未來發展的影響。</p>
+                        <p>&nbsp&nbsp&nbsp&nbsp&nbsp「第33屆中華民國人因工程學會年會暨學術研討會」由中華民國人因工程學會主辦，中原大學承辦，以「人因工程與智慧韌性」為主題，廣邀國內外人因專家學者、政府單位與產業界夥伴共同參與，深入探討新興科技應用對人因工程未來發展的影響。</p>
                         <p>&nbsp&nbsp&nbsp&nbsp&nbsp隨著人工智慧（AI）、物聯網（IoT）、5G 通訊、機器人協作與網宇實體整合系統（Cyber-Physical Systems, CPS）的迅速普及，全球產業與社會正加速邁向數位化與智慧化。然而，科技進步若缺乏人因工程的介入，往往可能導致操作負荷增加、認知誤差與系統使用排斥，甚至引發安全隱憂。如何讓智慧科技真正回應人類需求，並在醫療、交通、製造、教育、國防與生活服務等多元領域中落實「以人為本」的價值，正是當前人因工程的重要使命。</p>
                         <p>&nbsp&nbsp&nbsp&nbsp&nbsp本屆年會將聚焦於 AI 與人因工程的結合，探討智慧科技如何影響人機協作、決策支援與風險控管，並呈現跨領域的最新研究成果。議題涵蓋醫療人因與智慧照護、休閒與運動、交通安全與智慧運輸、職業安全與工作設計、國防與軍事人因、產品設計與創新等方向，期望透過跨界交流，促進產官學研的合作，開創人因工程在智慧社會下的新格局。</p>
                         <p>&nbsp&nbsp&nbsp&nbsp&nbsp學會亦將持續推動「人因工程論壇」，即「運輸安全、軍事、醫療、職業安全、航太、AI、以及現場人因案例」等專場，邀請國內外重量級學者與產業專家分享經驗，更特別舉辦「台、日、韓人因論壇」，邀請三方人因學者共同探討未來的發展方向。此外，為鼓勵年輕世代投入人因工程研究，本屆年會也將設置 學生論文競賽與創新設計競賽，提供青年學子交流與展現的平台，激發未來發展潛能。</p>
@@ -115,4 +115,3 @@
     </footer>
 </body>
 </html>
-
