--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <div class="max-w-4xl mx-auto">
                     <!-- Submission Tab Buttons -->
                     <div class="flex border-b border-gray-300">
-                        <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-symposium">第33屆中華民國人因工程學會年會暨學術研討會</button>
+                        <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-symposium">學術研討會</button>
                         <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-paper-competition">學生論文競賽</button>
                         <button class="submission-tab-button flex-1 py-3 px-4 text-lg font-semibold text-center transition-colors duration-300 border-b-2" data-target="tab-design-competition">學生設計競賽</button>
                     </div>
@@ -1098,3 +1098,4 @@
     </script>
 </body>
 </html>
+
