--- a/registration.html
+++ b/registration.html
@@ -56,23 +56,23 @@
                         <tbody>
                             <tr class="hover:bg-blue-50">
                                 <td class="p-4 border-b border-blue-200">人因學會會員</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $3,000</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $3,500</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold"><a href="https://core.newebpay.com/EPG/est/bc5aej">NTD $3,000</a></td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold"><a href="">NTD $3,500</a></td>
                             </tr>
                             <tr class="hover:bg-blue-50">
                                 <td class="p-4 border-b border-blue-200">非會員</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $4,000</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $4,500</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold"><a href="https://core.newebpay.com/EPG/est/zr16Mj">NTD $4,000</a></td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold"><a href="">NTD $4,500</a></td>
                             </tr>
                             <tr class="hover:bg-blue-50">
                                 <td class="p-4 border-b border-blue-200">人因學會學生會員</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $2,200</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold">NTD $2,700</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold"><a href="https://core.newebpay.com/EPG/est/K1sxS8">NTD $2,200</a></td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold"><a href="">NTD $2,700</a></td>
                             </tr>
                             <tr class="hover:bg-blue-50">
                                 <td class="p-4 border-b border-blue-200 rounded-bl-lg">非會員學生</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold rounded-br-lg">NTD $2,500</td>
-                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold rounded-br-lg">NTD $3,000</td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold rounded-br-lg"><a href="https://core.newebpay.com/EPG/est/BSnAlW">NTD $2,500</a></td>
+                                <td class="p-4 border-b border-blue-200 text-blue-600 font-semibold rounded-br-lg"><a href="">NTD $3,000</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -103,10 +103,7 @@
                                     <span class="w-3 h-3 bg-blue-600 rounded-full mr-3"></span>
                                     線上電子支付
                                 </h3>
-                                <p class="text-gray-600 mb-4">請點選以下對應身分之連結，並請於「留言給商店」欄位輸入您的投稿文章ID，以利後續對帳流程。</p>
-                                <a href="您的付款頁面網址" class="inline-block bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md hover:bg-blue-700 transition duration-300">
-                                    前往付款
-                                </a>
+                                <p class="text-gray-600 mb-4">請點選上面表格中對應身分之價格，並請於「留言給商店」欄位輸入您的投稿文章ID，以利後續對帳流程。</p>
                             </div>
                         </div>
                     </div>
