--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     <!-- Submission Tab Content -->
                     <div class="mt-8 text-left text-gray-600 leading-relaxed text-xl">
                         <div id="tab-symposium" class="submission-tab-panel space-y-4">
-                            <p>我本屆年會將聚焦於 AI 與人因工程的結合，探討智慧科技如何影響人機協作、決策支援與風險控管，並呈現跨領域的最新研究成果。議題 涵蓋醫療人因與智慧照護、休閒與運動、交通安全與智慧運輸、職業安全與工作設計、國防與軍事人因、產品設計與創新等方向，期望透過跨界交流，促進產官學研的合作，開創人因工程在智慧社會下的新格局。</p>
+                            <p>本屆年會將聚焦於 AI 與人因工程的結合，探討智慧科技如何影響人機協作、決策支援與風險控管，並呈現跨領域的最新研究成果。議題 涵蓋醫療人因與智慧照護、休閒與運動、交通安全與智慧運輸、職業安全與工作設計、國防與軍事人因、產品設計與創新等方向，期望透過跨界交流，促進產官學研的合作，開創人因工程在智慧社會下的新格局。</p>
                             <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
                              <ul class="list-disc list-inside space-y-2">
                                 <li><strong>開始投稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
@@ -625,7 +625,6 @@
                 <div class="max-w-xl mx-auto text-xl text-gray-700">
                     <p class="mb-4"><strong>研討會秘書處</strong></p>
                     <p class="mb-2">電子郵件：<a href="mailto:TBD" class="text-blue-600 hover:underline">TBD</a></p>
-                    <p>聯絡電話：TBD</p>
                 </div>
             </div>
         </section>
@@ -1098,5 +1097,6 @@
     </script>
 </body>
 </html>
+
 
 
