--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 </div>
                 <div class="max-w-xl mx-auto text-xl text-gray-700">
                     <p class="mb-4"><strong>研討會秘書處</strong></p>
-                    <p class="mb-2">電子郵件：<a href="mailto:TBD" class="text-blue-600 hover:underline">TBD</a></p>
+                    <p class="mb-2">電子郵件：<a href="mailto:est2026.contact@gmail.com" class="text-blue-600 hover:underline">est2026.contact@gmail.com</a></p>
                 </div>
             </div>
         </section>
@@ -1097,6 +1097,7 @@
     </script>
 </body>
 </html>
+
 
 
 
